# cmdlink

./: Cargo.toml  README.MD  build.rs
src/: cli.rs  config.rs  error.rs  main.rs  platform_binary.rs
