[package]
name = "cmdlink"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
tabled = "0.16.0"
thiserror = "2.0.3"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
dirs = "5.0.1"

[target.'cfg(windows)'.build-dependencies]
windows-registry = "0.3.0"
base64 = "0.22.1"
runas = "1.2.0"

[package.metadata.winres]
